# clio-kit

./: CLAUDE.md  CONTRIBUTING.md  FASTMCP_MIGRATION_STRATEGY.md  FINAL_STATUS.md  HDF5_IMPLEMENTATION_COMPLETE.md  HDF5_MCP_ANALYSIS.md  HDF5_REPLACEMENT_PLAN.md  MCPS.md  README.md  TEST-MANUALLY.md  cleanup_test_env.sh  pyproject.toml  setup_test_env.sh
.github/workflows/: docs-and-website.yml  publish.yml  quality_control.yml  test-chronomcp.yml  test-mcps.yml  wrp-tests.yml
agent-toolkit-mcp-servers/adios/: README.md  pyproject.toml
agent-toolkit-mcp-servers/arxiv/: README.md  pyproject.toml
agent-toolkit-mcp-servers/chronolog/: README.md  pyproject.toml
agent-toolkit-mcp-servers/compression/: README.md  pyproject.toml
agent-toolkit-mcp-servers/darshan/: README.md
agent-toolkit-mcp-servers/darshan/tests/: test_darshan_parser_posix_mpiio.py
agent-toolkit-mcp-servers/hdf5/: README.md  pyproject.toml
agent-toolkit-mcp-servers/jarvis/: README.md  pyproject.toml
agent-toolkit-mcp-servers/jarvis/tests/: test_server_direct.py
agent-toolkit-mcp-servers/lmod/: README.md  pyproject.toml
agent-toolkit-mcp-servers/ndp/: README.md  pyproject.toml
agent-toolkit-mcp-servers/ndp/src/: server.py
agent-toolkit-mcp-servers/node-hardware/: README.md  pyproject.toml
agent-toolkit-mcp-servers/pandas/: README.md  pyproject.toml
agent-toolkit-mcp-servers/pandas/tests/: test_data_cleaning.py  test_data_io.py  test_filtering.py  test_memory_optimization.py  test_output_formatter.py  test_pandas_statistics.py  test_time_series.py  test_transformations.py  test_validation.py
agent-toolkit-mcp-servers/parallel-sort/: README.md  pyproject.toml
agent-toolkit-mcp-servers/parallel-sort/tests/: test_edge_cases.py  test_filter_advanced.py
agent-toolkit-mcp-servers/paraview/: README.md  USAGE_README.md  prompt.md  pyproject.toml
agent-toolkit-mcp-servers/paraview-mcp/: README.md  prompt.md  pyproject.toml
agent-toolkit-mcp-servers/paraview-mcp/scripts/: automate_setup.py  build_paraview.py  configure_paraview.py  install_deps.py  installation_example.py  launch_gui.py  launch_server.py  test_installation.py
agent-toolkit-mcp-servers/paraview-mcp/src/paraview_mcp/: server.py
agent-toolkit-mcp-servers/paraview-mcp/src/paraview_mcp/implementation/: paraview_capabilities.py
agent-toolkit-mcp-servers/paraview-mcp/tests/: test_server.py
agent-toolkit-mcp-servers/paraview/scripts/: automate_setup.py  configure_paraview.py  install_deps.py  launch_gui.py
agent-toolkit-mcp-servers/paraview/tests/: test_paraview_capabilities.py  test_paraview_rendering.py  test_paraview_utilities.py
agent-toolkit-mcp-servers/parquet/: README.md
agent-toolkit-mcp-servers/parquet/tests/: test_additional_edge_cases.py  test_aggregate_column.py  test_filter_operations.py  test_server.py
agent-toolkit-mcp-servers/plot/: README.md  pyproject.toml
agent-toolkit-mcp-servers/slurm/: README.md  pyproject.toml
agent-toolkit-website/: docusaurus.config.js
agent-toolkit-website/docs/: intro.md
agent-toolkit-website/docs/mcps/: adios.md  arxiv.md  chronolog.md  compression.md  darshan.md  hdf5.md  jarvis.md  lmod.md  ndp.md  node_hardware.md  pandas.md  parallel_sort.md  paraview.md  parquet.md  plot.md  slurm.md
agent-toolkit-website/src/data/: mcpData.js
clio-kit-ai-devkit/: FASTMCP_2.0_DOCUMENTATION.md  FASTMCP_LATEST_FEATURES.md  README.md
clio-kit-ai-devkit/design_principles/: DESIGN.md
clio-kit-mcp-clients/wrp_bin/docs/: Installation.md  instructions.md
clio-kit-mcp-servers/adios/: README.md  pyproject.toml
clio-kit-mcp-servers/adios/docs/: basic_install.md  example_uses.md
clio-kit-mcp-servers/arxiv/: README.md  pyproject.toml
clio-kit-mcp-servers/arxiv/docs/: basic_install.md
clio-kit-mcp-servers/chronolog/: README.md  pyproject.toml
clio-kit-mcp-servers/compression/: README.md  pyproject.toml
clio-kit-mcp-servers/darshan/: README.md  pyproject.toml
clio-kit-mcp-servers/hdf5/: README.md  pyproject.toml
clio-kit-mcp-servers/hdf5/docs/: EXAMPLES.md  MIGRATION.md  (+2 more)
clio-kit-mcp-servers/jarvis/: README.md  pyproject.toml
clio-kit-mcp-servers/lmod/: README.md  pyproject.toml
clio-kit-mcp-servers/ndp/: README.md  pyproject.toml
clio-kit-mcp-servers/node-hardware/: README.md  pyproject.toml
clio-kit-mcp-servers/pandas/: README.md  pyproject.toml
clio-kit-mcp-servers/parallel-sort/: README.md  USAGE_GUIDE.md  pyproject.toml
clio-kit-mcp-servers/paraview/: .gitignore  LICENSE  README.md  USAGE_README.md  pyproject.toml
clio-kit-mcp-servers/parquet/: README.md  pyproject.toml
clio-kit-mcp-servers/plot/: README.md  pyproject.toml
clio-kit-mcp-servers/slurm/: README.md  pyproject.toml
clio-kit-website/: README.md  docusaurus.config.js  package.json
clio-kit-website/docs/: intro.md
clio-kit-website/static/: CNAME
iowarp_mcp_servers/adios/: pyproject.toml
iowarp_mcp_servers/arxiv/: pyproject.toml
iowarp_mcp_servers/chronolog/: pyproject.toml
iowarp_mcp_servers/compression/: pyproject.toml
iowarp_mcp_servers/darshan/: pyproject.toml
iowarp_mcp_servers/hdf5/: pyproject.toml
iowarp_mcp_servers/jarvis/: pyproject.toml
iowarp_mcp_servers/lmod/: pyproject.toml
iowarp_mcp_servers/ndp/: pyproject.toml
iowarp_mcp_servers/node-hardware/: pyproject.toml
iowarp_mcp_servers/pandas/: pyproject.toml
iowarp_mcp_servers/parallel-sort/: pyproject.toml
iowarp_mcp_servers/parquet/: pyproject.toml
iowarp_mcp_servers/plot/: pyproject.toml
iowarp_mcp_servers/slurm/: pyproject.toml
mcps/HDF5/: .gitignore  README.md  READY_TO_TEST.txt  pyproject.toml
mcps/HDF5/src/: __init__.py  async_io.py  batch_operations.py  cache.py  config.py  main.py  parallel_ops.py  prompts.py  protocol.py  resource_pool.py  resources.py  scanner.py  server.py  streaming.py  task_queue.py  tools.py  utils.py
mcps/HDF5/src/hdf5_mcp/: __init__.py  resources.py  server.py  tools.py
mcps/HDF5/src/transports/: __init__.py  base.py  sse_transport.py  stdio_transport.py
mcps/HDF5/tests/: test_validation.py
scripts/: generate_docs.py
src/clio_kit/: __init__.py
(+45 files in other folders)
