[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iowarp-agent-toolkit"
version = "0.4.0"
description = "Agent Toolkit - MCP Servers, Clients, and Tools for AI Agents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "IoWarp Team - Gnosis Research Center", email = "grc@illinoistech.edu"}
]

# Only dependencies needed for the launcher
dependencies = [
  "click>=8.1.0",
]

[project.urls]
Homepage = "https://github.com/iowarp/agent-toolkit"
Repository = "https://github.com/iowarp/agent-toolkit"
Issues = "https://github.com/iowarp/agent-toolkit/issues"

[project.scripts]
# Only the unified launcher entry point
agent-toolkit = "agent_toolkit:cli"

[tool.hatch.build]
sources = ["src"]

# Include all server directories in the wheel for uvx execution
[tool.hatch.build.targets.wheel.shared-data]
"agent-toolkit-mcp-servers" = "agent-toolkit-mcp-servers"

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "agent-toolkit-mcp-servers/",
    "README.md",
    "pyproject.toml"
]
