[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clio-kit"
version = "1.0.0"
description = "CLIO Kit - MCP Servers, Clients, and Tools for AI Agents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "IoWarp Team - Gnosis Research Center", email = "grc@illinoistech.edu"}
]

# Only dependencies needed for the launcher
dependencies = [
  "click>=8.1.0",
]

keywords = ["mcp", "model-context-protocol", "ai-agents", "llm-tools", "scientific-computing", "hpc", "hdf5", "slurm", "parquet", "research-tools"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/iowarp/clio-kit"
Repository = "https://github.com/iowarp/clio-kit"
Issues = "https://github.com/iowarp/clio-kit/issues"

[project.scripts]
# Only the unified launcher entry point
clio-kit = "clio_kit:cli"

[tool.hatch.build]
sources = ["src"]

# Include all server directories in the wheel for uvx execution
[tool.hatch.build.targets.wheel]
packages = ["clio_kit"]

[tool.hatch.build.targets.wheel.shared-data]
"clio-kit-mcp-servers" = "clio-kit-mcp-servers"
"prompts" = "prompts"

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "clio-kit-mcp-servers/",
    "prompts/",
    "README.md",
    "pyproject.toml"
]
