[project]
name = "hdf5-mcp"
version = "2.1.0"
description = "HDF5 FastMCP - Scientific Data Access for AI Agents | Agent Toolkit MCP Server"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "IoWarp Team - Gnosis Research Center", email = "grc@illinoistech.edu" }
]

keywords = ["hdf5", "scientific-data", "hierarchical-data", "data-analysis", "scientific-computing", "mcp", "llm-integration", "data-structures"]

dependencies = [
  "fastmcp>=2.13.0",
  "h5py>=3.15.0",
  "numpy>=2.0.0",
  "pydantic>=2.4.2,<3.0.0",
  "psutil>=5.9.0",
  "python-dotenv>=0.19.0"
]

[project.urls]
Homepage = "https://iowarp.github.io/agent-toolkit/"
Repository = "https://github.com/iowarp/agent-toolkit"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.12.5",
]

[project.scripts]
hdf5-mcp = "hdf5_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hdf5_mcp"]
