[project]
name = "paraview-mcp"
version = "1.0.0"
description = "MCP server for ParaView scientific visualization"
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause"
authors = [
    { name = "IoWarp Team - Gnosis Research Center", email = "grc@illinoistech.edu" }
]

keywords = ["MCP", "ParaView", "visualization", "scientific", "3D"]

dependencies = [
    "fastmcp>=2.13.0",
    "adios2>=2.9.0",
    "numpy>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://iowarp.github.io/agent-toolkit/"
Repository = "https://github.com/iowarp/agent-toolkit"


[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.5",
]

[project.scripts]
paraview-mcp = "paraview_mcp.server:main"
paraview-gui = "scripts.launch_gui:main"
paraview-server = "scripts.launch_server:main"
automate-setup = "scripts.automate_setup:main"
build-paraview = "scripts.build_paraview:main"
install-deps = "scripts.install_deps:main"
test-installation = "scripts.test_installation:main"
configure-paraview = "scripts.configure_paraview:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/paraview_mcp"]

[tool.coverage.run]
omit = [
    # Exclude server.py from coverage - it's a FastMCP glue layer
    # that initializes global ParaView connections causing test issues.
    # All business logic is tested in implementation modules
    "src/paraview_mcp/server.py",
    "*/tests/*",
]

[tool.coverage.report]
# Target 90%+ coverage on implementation modules
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
