[project]
name = "lmod-mcp"
version = "1.0.0"
description = "Lmod MCP - Environment Module Management for LLMs with comprehensive module operations"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"


[project.urls]
Homepage = "https://iowarp.github.io/iowarp-mcps/"
Repository = "https://github.com/iowarp/iowarp-mcps"

authors = [
    { name = "IoWarp Team - Gnosis Research Center", email = "grc@illinoistech.edu" }
]

dependencies = [
  "fastmcp",
  "python-dotenv>=1.0.0"
]

keywords = ["lmod", "environment-modules", "module-management", "hpc", "scientific-computing", "supercomputing", "cluster-computing", "module-system"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.5",
]

[project.scripts]
lmod-mcp = "server:main"

[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"
