[project]
name = "hdf5-mcp"
version = "2.0.0"
description = "HDF5 MCP - Advanced Scientific Data Access with caching, parallel ops, and streaming"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "IoWarp Scientific MCPs", email = "contact@iowarp.org" }
]

dependencies = [
  "mcp>=1.4.0",
  "h5py>=3.9.0",
  "numpy>=1.24.0,<2.0.0",
  "pydantic>=2.4.2,<3.0.0",
  "aiofiles>=23.2.1",
  "psutil>=5.9.0",
  "jinja2>=3.1.0",
  "python-dotenv>=0.19.0"
]

keywords = ["hdf5", "scientific-data", "hierarchical-data", "data-analysis", "scientific-computing", "mcp", "llm-integration", "data-structures"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.12.5",
]

[project.scripts]
hdf5-mcp = "main:main"

[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"
