[project]
name = "hdf5-mcp"
version = "3.0.0"
description = "HDF5 FastMCP - Next-gen Scientific Data Access with caching, parallel ops, and streaming"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "IoWarp Scientific MCPs", email = "contact@iowarp.org" }
]

dependencies = [
  "fastmcp>=0.2.0",
  "h5py>=3.9.0",
  "numpy>=1.24.0,<2.0.0",
  "pydantic>=2.4.2,<3.0.0",
  "aiofiles>=23.2.1",
  "psutil>=5.9.0",
  "python-dotenv>=0.19.0"
]

keywords = ["hdf5", "scientific-data", "hierarchical-data", "data-analysis", "scientific-computing", "mcp", "llm-integration", "data-structures"]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.12.5",
]

[project.scripts]
hdf5-mcp = "hdf5_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hdf5_mcp"]
